--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body
 {
     overflow-x: hidden;
     font-family: sans-serif;
-    color: #505962;
+    color: skyblue;
 }
 .navbar{
     text-transform: uppercase;
