--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body
     color: white;
     font-size: 2.4rem;
     padding-bottom: 2rem;
-    text-transform:uppercase;
+    text-transform:lowercase;
     margin-right: 10px;
  
 }
